moderate edit to wording

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ resume
     <div class="bannerpadding">
       <h1>Let's Talk!</h1>
     </br>
-    <p style = "color:#BEC4C7;">Feel free to contact me if you want to talk about CS, life, or even just say hello!</p>
+    <p style = "color:#BEC4C7;">Feel free to contact me if you want to talk about CS, life, employment, or even to just say hello!</p>
   </div>
 </div>
 <div class="contentpadding">
