added sandwichnews to projects

--- a/index.html
+++ b/index.html
@@ -333,6 +333,23 @@
             <div class="panel panel-default">
               <div class="panel-body hoverpanel">
                 <div class="time-period" style="float:right;">Summer 2015</div>
+                <h3><b>Sandwich News (1st Place @ Hack The Dot Seattle 2015)</b></h3>
+                <p>Developed an chrome extension in 2 hours based on the theme of "Sandwich News".</p>
+              </br>
+              <p class="alignleft">Built With: node.js, JavaScript, HTML, CSS.</p>
+              <p class="alignright">
+                <a href="https://sandwichnewz.herokuapp.com" target="_blank"><i class="fa fa-globe-play fa-2x"></i></a>
+                &nbsp;
+                <a href="https://github.com/nelson-liu/SandwichNews" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+              </p>
+              <div class="clear"></div>
+            </div>
+          </div>
+        </div>
+          <div class = "item">
+            <div class="panel panel-default">
+              <div class="panel-body hoverpanel">
+                <div class="time-period" style="float:right;">Summer 2015</div>
                 <h3><b>SoundHop (Finalist @ AngelHack Seattle 2015)</b></h3>
                 <p>Developed an Android application enabling multiple phones to play the same audio track via Wi-Fi P2P.</p>
               </br>
