updated current research

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
             <p> I'm a developer from Southern California (currently living in Seattle) melding my passions for programming, computer science research, and
               electrical engineering by creating meaningful products and services. I currently attend the University of Washington as a computer science major and statistics major.</p>
               <p>I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
-                and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
-                , natural language processing, computer modeling of natural processes, and wireless power. I'm currently working with the <a href="https://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>.</p>
+                <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>, and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
+                , natural language processing, computer modeling of natural processes, and wireless power. I'm currently working on natural language processing, specifically text-based prediction of Supreme Court decisions via amicus briefs with
+                 <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and his <a href="http://www.ark.cs.cmu.edu/" target="_blank">ARK research group</a>.</p>
               </br>
               <h3>Miscellaneous Tidbits</h3>
               <p> I'm currently reading: </br>
