added smsiri to projects

--- a/index.html
+++ b/index.html
@@ -314,13 +314,30 @@
         <div class = "item">
           <div class="panel panel-default">
             <div class="panel-body hoverpanel">
+              <div class="time-period" style="float:right;">Fall 2015</div>
+              <h3><b>SMSiri (Built @ Hack The Dot Seattle 2015)</b></h3>
+              <p>Created an SMS-based natural language question answering service.</p>
+            </br>
+            <p class="alignleft">Built With: Python</p>
+            <p class="alignright">
+              <a href="http://smsiri.co" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+              &nbsp;
+              <a href="https://github.com/nelson-liu/SMSiri" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+            </p>
+            <div class="clear"></div>
+          </div>
+        </div>
+      </div>
+        <div class = "item">
+          <div class="panel panel-default">
+            <div class="panel-body hoverpanel">
               <div class="time-period" style="float:right;">Summer 2015</div>
               <h3><b>Sandwich News (1st Place @ Hack The Dot Seattle 2015)</b></h3>
               <p>Developed an chrome extension in 2 hours based on the theme of "Sandwich News".</p>
             </br>
-            <p class="alignleft">Built With: node.js, JavaScript, HTML, CSS.</p>
+            <p class="alignleft">Built With: node.js, JavaScript, HTML, CSS</p>
             <p class="alignright">
-              <a href="https://sandwichnewz.herokuapp.com" target="_blank"><i class="fa fa-globe-play fa-2x"></i></a>
+              <a href="https://sandwichnewz.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
               &nbsp;
               <a href="https://github.com/nelson-liu/SandwichNews" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </p>
