fixed typo on site

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <div class="panel panel-default">
             <div class="panel-body hoverpanel">
               <div class="time-period" style="float:right;">Fall 2015</div>
-              <h3><b>SMSiri (Built @ Hack The Dot Seattle 2015)</b></h3>
+              <h3><b>SMSiri (Built @ MHacks 6)</b></h3>
               <p>Created an SMS-based natural language question answering service.</p>
             </br>
             <p class="alignleft">Built With: Python</p>
