edited technologies used in projects

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <h3><b>SMSiri (Built @ MHacks 6)</b></h3>
               <p>Created an SMS-based natural language question answering service.</p>
             </br>
-            <p class="alignleft">Built With: Python</p>
+            <p class="alignleft">Built With: Python (Flask)</p>
             <p class="alignright">
               <a href="http://smsiri.co" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
               &nbsp;
