--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
                   </div>
                   <hr>
                   <div class="panel-body">
+                    Ruby
+                    <span class="label label-warning" style="float:right;">Intermediate</span>
+                  </div>
+                  <hr>
+                  <div class="panel-body">
                     R
                     <span class="label label-danger" style="float:right;">Beginner</span>
                   </div>
