edited contacts section

--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@ resume
     <div class="col-sm-6" style="padding-left: 0px;">
       <div class = "cardcontainer">
         <div class = "item">
-          <div class="  panel panel-default" style="background-color: #4CAF50; text-align: center; color: white;" onclick="window.open('mailto:nelson@nelsonliu.me', 'emailWindow');">
+          <div class="  panel panel-default" style="background-color: #4CAF50; text-align: center; color: white;" onclick="window.open('mailto:nfliu@uw.edu', 'emailWindow');">
             <div class="panel-body hoverpanel socialcard">
               <i class="fa fa-envelope-o fa-4x"></i>
             </br>
-            <h3>nelson [at] nelsonliu.me</h3>
+            <h3>nfliu [at] uw.edu</h3>
           </br>
         </div>
       </div>
@@ -473,7 +473,7 @@ resume
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-linkedin-square fa-4x"></i>
         </br>
-        <h3>linkedin.com/in/nelsonliu1</h3>
+        <h3>nelsonliu1</h3>
       </br>
     </div>
   </div>
@@ -490,7 +490,7 @@ resume
           <div class="panel-body hoverpanel socialcard">
             <i class="fa fa-github fa-4x"></i>
           </br>
-          <h3>github.com/nelson-liu</h3>
+          <h3>nelson-liu</h3>
         </br>
       </div>
     </div>
@@ -505,7 +505,7 @@ resume
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-pencil-square fa-4x"></i>
         </br>
-        <h3>nelsonliu.me/writing/index.html</h3>
+        <h3>Writing</h3>
       </br>
     </div>
   </div>
