added new projects to site and resume

--- a/index.html
+++ b/index.html
@@ -320,6 +320,21 @@
           <div class="panel panel-default">
             <div class="panel-body hoverpanel">
               <div class="time-period" style="float:right;">Fall 2015</div>
+              <h3><b>ASLSpeak (Best Use of Microsoft Tech / Best Use of Data @ MHacks 6)</b></h3>
+              <p>Created a machine-learning powered sign language gesture translation tool.</p>
+            </br>
+            <p class="alignleft">Built With: Leap Motion, Python, Microsoft Azure Machine Learning</p>
+            <p class="alignright">
+              <a href="https://github.com/nelson-liu/ASLSpeak" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+            </p>
+            <div class="clear"></div>
+          </div>
+        </div>
+      </div>
+        <div class = "item">
+          <div class="panel panel-default">
+            <div class="panel-body hoverpanel">
+              <div class="time-period" style="float:right;">Fall 2015</div>
               <h3><b>SMSiri (Built @ MHacks 6)</b></h3>
               <p>Created an SMS-based natural language question answering service.</p>
             </br>
