--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   <hr>
                   <div class="panel-body">
                     Python
-                    <span class="label label-success" style="float:right;">Proficient</span>
+                    <span class="label label-warning" style="float:right;">Intermediate</span>
                   </div>
                   <hr>
                   <div class="panel-body">
