--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <div class="panel panel-default">
             <div class="panel-body hoverpanel">
               <div class="time-period" style="float:right;">Fall 2015</div>
-              <h3><b>ASLSpeak (Best Use of Microsoft Tech / Best Use of Data @ MHacks 6)</b></h3>
+              <h3><b>ASLSpeak (Best Use of Microsoft Tech / Best Use of Data @ DubHacks Fall 2015)</b></h3>
               <p>Created a machine-learning powered sign language gesture translation tool.</p>
             </br>
             <p class="alignleft">Built With: Leap Motion, Python, Microsoft Azure Machine Learning</p>
