edited link text

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ resume
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-linkedin-square fa-4x"></i>
         </br>
-        <h3>nelsonliu1</h3>
+        <h3>linkedin.com/in/nelsonliu1</h3>
       </br>
     </div>
   </div>
@@ -505,7 +505,7 @@ resume
           <div class="panel-body hoverpanel socialcard">
             <i class="fa fa-github fa-4x"></i>
           </br>
-          <h3>nelson-liu</h3>
+          <h3>github.com/nelson-liu</h3>
         </br>
       </div>
     </div>
