added URL to new blog

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <hr class="nomargin">
             <li class="withripple" id="resume"><a href="/files/N_LIU_RESUME.pdf" target="_blank"><i class="fa fa-clipboard"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</a></li>
             <hr class="nomargin">
-            <li class="withripple" id="blog"><a href="/writing/index.html" target="_blank"><i class="fa fa-pencil"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</a></li>
+            <li class="withripple" id="blog"><a href="http://blog.nelsonliu.me" target="_blank"><i class="fa fa-pencil"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</a></li>
             <hr class="nomargin">
           </ul>
 
@@ -516,11 +516,11 @@ resume
 <div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
-      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('/writing/index.html','mywindow');">
+      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('http://blog.nelsonliu.me','mywindow');">
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-pencil-square fa-4x"></i>
         </br>
-        <h3>Writing</h3>
+        <h3>blog.nelsonliu.me</h3>
       </br>
     </div>
   </div>
