fix: edit description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="http://www.nelsonliu.me/img/me.jpg" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="My name is Nelson Liu, and I love building things that matter.">
+  <meta name="description" content="Hi! I'm Nelson, and I love building things.">
   <meta name="author" content="Nelson Liu">
 
   <title>Nelson Liu | Developer based in Seattle, Washington</title>
