feature: add irc handle to contact page.

--- a/index.html
+++ b/index.html
@@ -516,11 +516,11 @@ resume
 <div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
-      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('http://blog.nelsonliu.me','mywindow');">
+      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('https://webchat.freenode.net/','mywindow');">
         <div class="panel-body hoverpanel socialcard">
-          <i class="fa fa-pencil-square fa-4x"></i>
+          <i class="fa fa-comment fa-4x"></i>
         </br>
-        <h3>blog.nelsonliu.me</h3>
+        <h3>nelson-liu on freenode IRC</h3>
       </br>
     </div>
   </div>
