doc: add details about scikit-learn involvement

--- a/index.html
+++ b/index.html
@@ -316,6 +316,20 @@
         -->
       </br>
       <div class = "cardcontainer">
+	<div class = "item">
+          <div class="panel panel-default">
+            <div class="panel-body hoverpanel">
+              <div class="time-period" style="float:right;">Fall 2015 - Present</div>
+              <h3><b>scikit-learn</b></h3>
+              <p>Active contributor and reviewer for the scikit-learn project.</p>
+            </br>
+            <p class="alignleft">Built With: Python</p>
+            <p class="alignright">
+              <a href="https://github.com/scikit-learn/scikit-learn" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+            </p>
+            <div class="clear"></div>
+          </div>
+        </div>
         <div class = "item">
           <div class="panel panel-default">
             <div class="panel-body hoverpanel">
