fix: update ark link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <p>I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
                 <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>, and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces,
                 natural language processing, computer modeling of natural processes, and wireless power. I'm currently working on natural language processing, specifically text-based prediction of Supreme Court decisions via amicus briefs with
-                <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and his <a href="http://www.ark.cs.cmu.edu/" target="_blank">ARK research group</a>.</p>
+                <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and his <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a>.</p>
               </br>
 
             </div>
