--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</span></a></li>
             <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</span></a></li>
             <li id="resume-xs"><a href="/files/N_LIU_RESUME.pdf" target="_blank" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
-            <li id="blog-xs"><a href="/writing/index.html" target="_blank" class="text-center"><i class="fa fa-pencil"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</span></a></li>
+            <li id="blog-xs"><a href="http://blog.nelsonliu.me" target="_blank" class="text-center"><i class="fa fa-pencil"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</span></a></li>
           </ul>
         </div>
         <!-- /sidebar -->
