feature: edit recent news

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section>
             <h2>Recent News</h2>
             <ul>
-                <li>Something newsworthy</li>
+                <li>I'm now working with the <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a> on NLP with computational social science.</li>
             </ul>
         </section>
         <section>
