--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 	<meta property="og:image" content="http://www.nelsonliu.me/img/nelson-liu-2016.jpg" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Hi! I'm Nelson, and I'm an undergraduate at the University of Washington.">
+	<meta name="description" content="Hi! I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
 	<meta name="author" content="Nelson Liu">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/pygments.css">
@@ -148,5 +148,15 @@
 	      <br>
             </ul>
         </section>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51640218-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     </body>
 </html>
