--- a/index.html
+++ b/index.html
@@ -1,103 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>Nelson Liu</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta charset="utf-8">	
-	<meta property="og:url" content="http://www.nelsonliu.me" />
-	<meta property="og:title" content="Nelson Liu" />
-	<meta property="og:description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington." />
-	<meta property="og:image" content="http://www.nelsonliu.me/img/nelson-liu-2016.jpg" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Hi! I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
-	<meta name="author" content="Nelson Liu">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/pygments.css">
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="http://blog.nelsonliu.me/">Blog</a></li>		  
-                  <li><a href="projects.html">Projects</a></li>
-		  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="files/N_LIU_RESUME.pdf" target="_blank">Resume</a></li>
-                </ul>
-            </nav>
-            <h2><a href="index.html">Nelson Liu</a></h2>
-        </header>
-        <p>
-            <img src="img/nelson-liu-2016.jpg" alt="Nelson Liu" hspace="10" vspace="-10" width="180" align="left">
-            Nelson Liu<br>
-            Undergraduate student<br>
-            <a href="http://www.washington.edu/">University of Washington</a><br>
-            <br>
-            nfliu [at] washington edu
-            <br>
-            <br><br><br><br>
-        </p>
-        <section>
-            <h2>Recent News</h2>
-            <ul>
-	        <li> (4/2016) I've been selected as a Google Summer of Code participant; I'll be working with the <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn project</a>, specifically the decision tree module. You can read my proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/%5BNelson-Liu%5D-GSoC-2016-Project-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests." target="_blank">here</a>.</li>
-                <li> (9/2015) I'm now working with the <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a> on NLP with computational social science.</li>
-            </ul>
-        </section>
-        <section>
-	  <h2>About Me</h2>
-          <p> I'm an undergraduate at the University of Washington, where I hope to major in
-                computer science, linguistics, and statistics.
-          </p>
-          <p>My research interests have varied with time, and I've done both independent and supervised work in subjects
-	    ranging from brain control interfaces,
-	    natural language processing, computer modeling of natural processes, and wireless power.
-	    Before the University of Washington, I was a research assistant <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s
-	    <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the
-	    <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
-            <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>,
-	    and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>.
-	  </p>
-	  <p>
-	    My current research interests are in natural language processing and computational social science;
-	    I'm currently working on text-based prediction of Supreme Court decisions via amicus briefs with
-	    <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and the
-	    <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a>.
-          </p>
-        </section>
-	<section>
-	  <h2>Links</h2>
-	  <p>I write <a href="https://github.com/nelson-liu" target="_blank">code</a></p>
-	  <p>I use PGP, here are my <a href="https://keybase.io/nelsonliu" target="_blank">keys</a></p>
-	  <p>I occasionally <a href="https://twitter.com/imnelsonliu" target="_blank">retweet things</a></p>
-	  <p>I make a <a href="http://blog.nelsonliu.me/" target="_blank">blog</a> post once in a blue moon</p>
-	</section>
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <title>Nelson Liu</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">	
+	  <meta property="og:url" content="http://www.nelsonliu.me" />
+	  <meta property="og:title" content="Nelson Liu" />
+	  <meta property="og:description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington." />
+	  <meta property="og:image" content="http://www.nelsonliu.me/img/nelson-liu-2016.jpg" />
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="description" content="Hi! I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
+	  <meta name="author" content="Nelson Liu">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pygments.css">
+	  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	  <link rel="manifest" href="/manifest.json">
+	  <meta name="msapplication-TileColor" content="#ffffff">
+	  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	  <meta name="theme-color" content="#ffffff">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="http://blog.nelsonliu.me/">Blog</a></li>		  
+          <li><a href="projects.html">Projects</a></li>
+		      <li><a href="contact.html">Contact</a></li>
+          <li><a href="files/N_LIU_RESUME.pdf" target="_blank">Resume</a></li>
+        </ul>
+      </nav>
+      <h2><a href="index.html">Nelson Liu</a></h2>
+    </header>
+    <p>
+      <img src="img/nelson-liu-2016.jpg" alt="Nelson Liu" hspace="10" vspace="-10" width="180" align="left">
+      Nelson Liu<br>
+      Undergraduate student<br>
+      <a href="http://www.washington.edu/">University of Washington</a><br>
+      <br>
+      nfliu [at] washington edu
+      <br>
+      <br><br><br><br>
+    </p>
+    <section>
+      <h2>Recent News</h2>
+      <ul>
+        <li> (April 2016) I've received a Scipy Scholarship and will be attending <a href="http://scikit-learn.org/stable/" target="_blank">SciPy 2016</a> in July; thanks to Enthought and the rest of the conference sponsors for their generous support.</li>
+        <li> (May 2016) I'll be attending <a href="http://scikit-learn.org/stable/" target="_blank">NAACL-HLT 2016</a>.</li>
+        <li> (May 2016) I'll be attending <a href="http://scikit-learn.org/stable/" target="_blank">NAACL-HLT 2016</a> in June.</li>
+	      <li> (April 2016) I've been selected as a Google Summer of Code participant; I'll be working with the <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn project</a>, specifically the decision tree module. You can read my proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/%5BNelson-Liu%5D-GSoC-2016-Project-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests." target="_blank">here</a>.</li>
+        <li> (September 2015) I'm now working with the <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a> on NLP with computational social science.</li>
+      </ul>
+    </section>
+    <section>
+	    <h2>About Me</h2>
+      <p> I'm an undergraduate at the University of Washington, where I hope to major in
+        computer science, linguistics, and statistics.
+      </p>
+      <p>My research interests have varied with time, and I've done both independent and supervised work in subjects
+	      ranging from brain control interfaces,
+	      natural language processing, computer modeling of natural processes, and wireless power.
+	      Before the University of Washington, I was a research assistant <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s
+	      <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the
+	      <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
+        <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>,
+	      and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>.
+	    </p>
+	    <p>
+	      My current research interests are in natural language processing and computational social science;
+	      I'm currently working on text-based prediction of Supreme Court decisions via amicus briefs with
+	      <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and the
+	      <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a>.
+      </p>
+    </section>
+	  <section>
+	    <h2>Links</h2>
+	    <p>I write <a href="https://github.com/nelson-liu" target="_blank">code</a></p>
+	    <p>I use PGP, here are my <a href="https://keybase.io/nelsonliu" target="_blank">keys</a></p>
+	    <p>I occasionally <a href="https://twitter.com/imnelsonliu" target="_blank">retweet things</a></p>
+	    <p>I make a <a href="http://blog.nelsonliu.me/" target="_blank">blog</a> post once in a blue moon</p>
+	  </section>
+	  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51640218-1', 'auto');
-  ga('send', 'pageview');
+      ga('create', 'UA-51640218-1', 'auto');
+      ga('send', 'pageview');
 
-</script>
-    </body>
+    </script>
+  </body>
 </html>
