fix links in news

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <section>
       <h2>Recent News</h2>
       <ul>
-        <li> (May 2016) I've received a Scipy Scholarship and will be attending <a href="http://scikit-learn.org/stable/" target="_blank">SciPy 2016</a> in July; thanks to Enthought and the rest of the conference sponsors for their generous support.</li>
-        <li> (May 2016) I'll be attending <a href="http://scikit-learn.org/stable/" target="_blank">NAACL-HLT 2016</a> in June.</li>
+        <li> (May 2016) I've received a Scipy Scholarship and will be attending <a href="http://scipy2016.scipy.org/" target="_blank">SciPy 2016</a> in July; thanks to Enthought and the rest of the conference sponsors for their generous support.</li>
+        <li> (May 2016) I'll be attending <a href="http://naacl.org/naacl-hlt-2016/" target="_blank">NAACL-HLT 2016</a> in June.</li>
 	      <li> (April 2016) I've been selected as a Google Summer of Code participant; I'll be working with the <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn project</a>, specifically the decision tree module. You can read my proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/%5BNelson-Liu%5D-GSoC-2016-Project-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests." target="_blank">here</a>.</li>
         <li> (September 2015) I'm now working with the <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a> on NLP with computational social science.</li>
       </ul>
