feature: edit news and project wordings

--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 	      <li><h3>scikit-learn</h3>
 		<ul>
 		  <li>
-		    Prolific contributor to the most popular machine learning library in the world.
+		    Prolific contributor to the popular Python machine learning library.
 		  </li>
 		  <li><a href="https://github.com/scikit-learn/scikit-learn" target="_blank">scikit-learn on GitHub</a></li>
 		</ul>
