fix:edit typo on bio

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       <p>My research interests have varied with time, and I've done both independent and supervised work in subjects
 	      ranging from brain control interfaces,
 	      natural language processing, computer modeling of natural processes, and wireless power.
-	      Before the University of Washington, I was a research assistant <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s
+	      Previously, I was a research assistant at <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s
 	      <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the
 	      <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
         <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>,
 	      and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>.
 	    </p>
 	    <p>
-	      My current research interests are in natural language processing and computational social science;
-	      I'm currently working on text-based prediction of Supreme Court decisions via amicus briefs with
+	      My current research interests are in natural language processing and
+	      computational social science; I'm currently working with
 	      <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and the
 	      <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a>.
       </p>
