--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,10 @@
 		  <li>
 		    A SMS-based natural language question answering service.
 		  </li>
-		  <li><a href="https://github.com/nelson-liu/SMSiri" target="_blank">SMSiri on GitHub</a></li>
+		  <li><a href="https://github.com/nelson-liu/SMSiri" target="_blank">SMSiri on GitHub</a>
+      </li>
+		  <li><a href="http://smsiri.herokuapp.com/static/index.html" target="_blank">SMSiri Live Website</a>
+      </li>
 		</ul>
 	      </li>
 	      <br>
