edit homepage info

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </section>
     <section>
 	    <h2>About Me</h2>
-      <p> I'm an undergraduate at the University of Washington, where I hope to major in
-        computer science, linguistics, and statistics.
+      <p> I'm an undergraduate at the University of Washington, where I am studying
+        linguistics and statistics.
       </p>
       <p>My research interests have varied with time, and I've done both independent and supervised work in subjects
 	      ranging from brain control interfaces,
