--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
     <p>
       <img src="img/nelson-liu-2016.jpg" alt="Nelson Liu" hspace="10" vspace="-10" width="180" align="left">
       Nelson Liu<br>
-      Second Year Undergraduate student<br>
       <a href="http://www.washington.edu/">University of Washington</a><br>
       <br>
-      nfliu [at] washington edu
+      nfliu [<a href="https://en.wikipedia.org/wiki/At_sign">strudel</a>] washington.edu
       <br>
       <br><br><br><br>
     </p>
