edit homepage info

--- a/index.html
+++ b/index.html
@@ -55,31 +55,41 @@
     <section>
       <h2>Recent News</h2>
       <ul>
-        <li> (November 2016) Joining the <a href="http://allenai.org/" target="_blank">Allen Institute for Artificial Intelligence (AI2)</a> as a research intern in January.</li>
-        <li> (May 2016) I will be attending <a href="http://scipy2016.scipy.org/" target="_blank">SciPy 2016</a> in July with the support of a Scipy Scholarship.</li>
-        <li> (May 2016) I'll be attending <a href="http://naacl.org/naacl-hlt-2016/" target="_blank">NAACL-HLT 2016</a> in June.</li>
-	      <li> (April 2016) I've been selected as a Google Summer of Code participant; I'll be working with the <a href="http://scikit-learn.org/stable/" target="_blank">scikit-learn project</a>, specifically the decision tree module. You can read my proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/GSoC-2016-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests." target="_blank">here</a>.</li>
+        <li> Joined the <a href="http://allenai.org/" target="_blank">Allen Institute for Artificial Intelligence (AI2)</a> as a research intern in January.</li>
+        <li> Went to <a href="http://scipy2016.scipy.org/" target="_blank">SciPy 2016</a> in July with the support of a Scipy Scholarship.</li>
+	      <li> Selected as a Google Summer of Code participant. I worked with
+	      the <a href="http://scikit-learn.org/stable/"
+	      target="_blank">scikit-learn project</a>, specifically the decision tree
+	      module. You can read my
+	      proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/GSoC-2016-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests."
+	      target="_blank">here</a>.</li>
       </ul>
     </section>
     <section>
 	    <h2>About Me</h2>
-      <p> I'm an undergraduate at the University of Washington, where I am studying
+      <p> I'm an undergraduate at the University of Washington, where I'm studying
         linguistics and statistics.
       </p>
-      <p>My research interests have varied with time, and I've done both independent and supervised work in subjects
-	      ranging from brain control interfaces,
-	      natural language processing, computer modeling of natural processes, and wireless power.
-	      Previously, I was a research assistant at <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s
-	      <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the
-	      <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
-        <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>,
-	      and the <a href="http://netlab.cs.washington.edu/" target="_blank">University of Washington Wireless Lab</a>.
+      <p>
+        I work on research as a member
+        of <a href="http://www.ark.cs.washington.edu/" target="_blank">Noah's
+        ARK</a>, and I am advised
+        by <a href="http://homes.cs.washington.edu/~nasmith/"
+        target="_blank">Noah Smith</a>. My broad research interests lie in and
+        at the intersection of natural language processing and machine learning.
 	    </p>
-	    <p>
-	      My current research interests are in natural language processing and
-	      computational social science; I'm currently working with
-	      <a href="http://www.cs.cmu.edu/~nasmith/" target="_blank">Noah Smith</a> and the
-	      <a href="http://www.ark.cs.washington.edu/" target="_blank">ARK research group</a>.
+
+      <p>
+        Outside of work I enjoy contributing to open source, particularly to the
+        scikit-learn project. Beyond computer-related things, I like hiking,
+        photography, and attempting to cook.
+      </p>
+
+      <p>
+        I'm currently a research intern at the <a href="http://allenai.org/"
+        target="_blank">Allen Institute for Artificial Intelligence (AI2)</a>,
+        where I'm generally working on applying deep learning to reading
+        comprehension tasks.
       </p>
     </section>
 	  <section>
