replace resume with CV

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <meta property="og:description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington." />
 	  <meta property="og:image" content="http://www.nelsonliu.me/img/nelson-liu-2016.jpg" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  <meta name="description" content="Hi! I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
+	  <meta name="description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
 	  <meta name="author" content="Nelson Liu">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pygments.css">
@@ -39,7 +39,7 @@
           <li><a href="http://blog.nelsonliu.me/">Blog</a></li>		  
           <li><a href="projects.html">Projects</a></li>
 		      <li><a href="contact.html">Contact</a></li>
-          <li><a href="files/N_LIU_RESUME.pdf" target="_blank">Resume</a></li>
+          <li><a href="files/N_LIU_CV.pdf" target="_blank">CV</a></li>
         </ul>
       </nav>
       <h2><a href="index.html">Nelson Liu</a></h2>
@@ -67,8 +67,8 @@
     </section>
     <section>
 	    <h2>About Me</h2>
-      <p> I'm an undergraduate at the University of Washington, where I'm studying
-        linguistics and statistics.
+      <p> I'm an undergraduate at the University of Washington, where I'm
+         studying computer science, statistics, and linguistics.
       </p>
       <p>
         I work on research as a member
