--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Nelson Liu</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">	
+    <meta charset="utf-8">
+    <meta property="og:url" content="https://homes.cs.washington.edu/~nfliu/" />
 	  <meta property="og:title" content="Nelson Liu" />
 	  <meta property="og:description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington." />
-	  <meta property="og:image" content="http://www.nelsonliu.me/img/nelson-liu-2016.jpg" />
+	  <meta property="og:image" content="https://homes.cs.washington.edu/~nfliu/img/nelson-liu-2016.jpg" />
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  <meta name="description" content="I'm Nelson Liu, and I'm an undergraduate at the University of Washington.">
 	  <meta name="author" content="Nelson Liu">
