--- a/index.html
+++ b/index.html
@@ -55,42 +55,65 @@
     <section>
       <h2>Recent News</h2>
       <ul>
-        <li> Joined the <a href="http://allenai.org/" target="_blank">Allen Institute for Artificial Intelligence (AI2)</a> as a research intern in January.</li>
-        <li> Went to <a href="http://scipy2016.scipy.org/" target="_blank">SciPy 2016</a> in July with the support of a Scipy Scholarship.</li>
-	      <li> Selected as a Google Summer of Code participant. I worked with
-	      the <a href="http://scikit-learn.org/stable/"
-	      target="_blank">scikit-learn project</a>, specifically the decision tree
-	      module. You can read my
-	      proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/GSoC-2016-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests."
-	      target="_blank">here</a>.</li>
+        <li>
+          Joining the <a href="http://www.isi.edu/" target="_blank">USC
+          Information Sciences
+          Institute</a> <a href="http://www.isi.edu/research_groups/nlg/home"
+          target="_blank">natural language group</a> as a research intern in
+          June, where I'll be working
+          with <a href="http://www.isi.edu/~knight/" target="_blank">Kevin Knight</a>.
+        </li>
+        <li>
+          Joined the <a href="http://allenai.org/" target="_blank">Allen
+          Institute for Artificial Intelligence (AI2)</a> as a research intern in
+          January, working with <a href="http://matt-gardner.github.io/"
+          target="_blank">Matt Gardner</a>.
+        </li>
+        <li>
+          Went to <a href="http://scipy2016.scipy.org/" target="_blank">SciPy
+          2016</a> in July with the support of a Scipy Scholarship.
+        </li>
+	      <li>
+          Participated in Google Summer of Code. I worked with
+          the <a href="http://scikit-learn.org/stable/"
+          target="_blank">scikit-learn project</a>, specifically the decision
+          tree module. You can read my project
+          proposal <a href="https://github.com/scikit-learn/scikit-learn/wiki/GSoC-2016-Proposal:-Addition-of-various-enhancements-to-the-tree-module-by-completing-stalled-pull-requests."
+          target="_blank">here</a>.
+        </li>
       </ul>
     </section>
     <section>
 	    <h2>About Me</h2>
       <p> I'm an undergraduate at the University of Washington, where I'm
-         studying computer science, statistics, and linguistics.
-      </p>
-      <p>
-        I work on research as a member
-        of <a href="http://www.ark.cs.washington.edu/" target="_blank">Noah's
-        ARK</a>, and I am advised
-        by <a href="http://homes.cs.washington.edu/~nasmith/"
-        target="_blank">Noah Smith</a>. My broad research interests lie in and
-        at the intersection of natural language processing and machine learning.
+         studying computer science, statistics, and linguistics. I work on
+         research as a member of <a href="http://www.ark.cs.washington.edu/"
+         target="_blank">Noah's ARK</a>, and I am advised
+         by <a href="http://homes.cs.washington.edu/~nasmith/"
+         target="_blank">Noah Smith</a>. My broad research interests lie in and
+         at the intersection of natural language processing and machine
+         learning.
 	    </p>
-
       <p>
-        Outside of work I enjoy contributing to open source, particularly to the
-        scikit-learn project. Beyond computer-related things, I like hiking,
-        photography, and attempting to cook.
+        Outside of work I enjoy contributing to open source and just programming
+        for fun. Beyond computer-related things, I like hiking, photography, and
+        attempting to cook.
       </p>
-
+    </section>
+    <section>
+	    <h2>Professional </h2>
       <p>
         I'm currently a research intern at the <a href="http://allenai.org/"
         target="_blank">Allen Institute for Artificial Intelligence (AI2)</a>,
-        where I'm generally working on applying deep learning to reading
-        comprehension tasks.
-      </p>
+        where I'm working with <a href="http://matt-gardner.github.io/"
+        target="_blank">Matt Gardner</a> on applying deep learning
+        to reading comprehension tasks. During the summer of 2016, I
+        participated in the
+        <a href="https://developers.google.com/open-source/gsoc/"
+        target="_blank">Google Summer of Code</a>, working with
+        the <a href="http://scikit-learn.org/stable/"
+        target="_blank">scikit-learn project</a>
+	    </p>
     </section>
 	  <section>
 	    <h2>Links</h2>
