--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,17 @@
       <h2>{Personal|Hackathon} Projects and Open Source</h2>
       <ul>
         <li>
+          <h3>deep_qa</h3>
+          <ul>
+            <li>
+              Deep learning toolkit and data pipeline for question answering and
+              reading comprehension, written on top of Keras.
+            </li>
+            <li><a href="https://github.com/allenai/deep_qa" target="_blank">deep_qa on GitHub</a></li>
+          </ul>
+        </li>
+        <br>
+        <li>
           <h3>scikit-learn</h3>
           <ul>
             <li>
